--- a/src/components/footer/footer.module.scss
+++ b/src/components/footer/footer.module.scss
@@ -13,7 +13,7 @@
     }
 
     .follow {
-        margin-top: 20px;
+      margin-top: 20px;
       p {
         margin: 0;
         margin-bottom: 10px;
@@ -53,6 +53,10 @@
       }
       p:nth-child(2) {
         margin-bottom: 16px;
+        cursor: pointer;
+      }
+      p:nth-child(3){
+        cursor: pointer;
       }
     }
 
@@ -75,6 +79,15 @@
         display: flex;
         gap: 10px;
         align-items: center;
+        a {
+          text-decoration: none;
+          color: white;
+          font-family: "Montserrat";
+          font-size: 12px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: 16px; /* 133.333% */
+        }
         img {
           width: 16px;
         }
@@ -115,11 +128,11 @@
     padding: 0 83px;
     padding-bottom: 20px;
     .footer_cont {
-        padding-bottom: 60px;
+      padding-bottom: 60px;
       flex-direction: row;
       justify-content: space-between;
 
-      .follow{
+      .follow {
         margin-top: 10px;
       }
     }
